--- a/Client/src/components/Shop/Edit/Edit.css
+++ b/Client/src/components/Shop/Edit/Edit.css
@@ -14,6 +14,8 @@
 	max-width: 1000px;
 	height: 80%;
 	max-height: 700px;
+	min-height: 620px;
+
 	justify-content: space-around;
 	align-items: center;
 	border-radius: 10px;
